deploy/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: jumi-ah-dev
  labels:
    app.kubernetes.io/name: jumi-ah-dev
